--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "history": "^5.0.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
