--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
+    "enzyme-adapter-react-16.1": "^1.6.3",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "babel-eslint": "10.1.x",
+    "enzyme": "^3.11.0",
     "eslint": "7.11.x",
     "eslint-config-airbnb": "18.1.x",
     "eslint-plugin-import": "2.22.x",
