--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "history": "^5.0.0",
