--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "eslint-f": "npx eslint . --fix",
-    "stylelint-f": "npx stylelint **/*.{css,scss} --fix"
+    "stylelint-f": "npx stylelint **/*.{css,scss} --fix",
+    "format": "yarn eslint-f && yarn stylelint-f"
   },
   "eslintConfig": {
     "extends": [
