--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,11 +3,7 @@
 
 name: Test with jest
 
-on:
-  push:
-    branches: [ feature/add-recipe-catalogue ]
-  pull_request:
-    branches: [ feature/add-recipe-catalogue ]
+on: pull_request
 
 jobs:
   build:
