--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "jest --config ./jest.config.js",
+    "test": "jest --config ./jest.config.js --watch",
     "eject": "react-scripts eject",
     "eslint-f": "npx eslint . --fix",
     "stylelint-f": "npx stylelint **/*.{css,scss} --fix",
-    "format": "yarn eslint-f && yarn stylelint-f"
+    "format": "yarn eslint-f && yarn stylelint-f",
+    "pretest": "yarn format"
   },
   "eslintConfig": {
     "extends": [
