A few minor changes
- Modify package json commands
- Styling

issue #12

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "jest --config ./jest.config.js --watch",
+    "test:dev": "jest --config ./jest.config.js --watch",
+    "test": "jest --config ./jest.config.js",
     "eject": "react-scripts eject",
     "eslint-f": "npx eslint . --fix",
     "stylelint-f": "npx stylelint **/*.{css,scss} --fix",
